--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,3 @@
 language: python
-deploy:
-  provider: heroku
-  api_key:
-    secure: 8_f8UH-K9hJ1Dnogs821eA
-  app: flask-travis-heroku-deployment
-  on:
-    repo: igortereshchenko/flask-app-travis-heroku-deployment
+script:
+  - python test/test_app.py
